@@ -1,3 +1,7 @@
+2000-08-01  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>
+
+	* main.cc (show_option): Fixed several width glitches.
+
 2000-07-18  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>
 
 	* cli.h (struct cli_option): Added new uinteger type.
